Enigma/testing/error/reflectorerror.inp
* B C I II l AAAA (SD) (BC)
aoijfiosadf
safdsoaijf